feat(*): add PlatformVersion header
Ref: #268
