# docs-api/swagger.yaml
@@ -61,6 +61,12 @@ components:
         enum: ["application/json"]
       description: Content-Type header, required for all endpoints
 
+  headers:
+    X-ORTHANC-PLATFORM-VERSION:
+      description: Current platform version
+      schema:
+        type: string
+
   schemas:
     BaseSuccessResponse:
       type: object
@@ -669,12 +675,18 @@ paths:
       responses:
         '200':
           description: Successfully fetched the hall of fame
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/HallOfFameSuccessResponse'
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
@@ -694,12 +706,18 @@ paths:
       responses:
         '200':
           description: Successfully logged in as guest
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/LoginGuestSuccessResponse'
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
@@ -726,18 +744,27 @@ paths:
       responses:
         '200':
           description: Character generated successfully
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/CharacterGenerateSuccessResponse'
         '401':
           description: Unauthorized
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UnauthorizedResponse'
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
@@ -758,18 +785,27 @@ paths:
       responses:
         '200':
           description: Game started successfully
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/GameStartSuccessResponse'
         '401':
           description: Unauthorized
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UnauthorizedResponse'
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
@@ -796,18 +832,27 @@ paths:
       responses:
         '200':
           description: Message sent successfully
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ChatSendSuccessResponse'
         '401':
           description: Unauthorized
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UnauthorizedResponse'
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
@@ -828,18 +873,27 @@ paths:
       responses:
         '200':
           description: Chat messages retrieved
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ChatPollSuccessResponse'
         '401':
           description: Unauthorized
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UnauthorizedResponse'
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
@@ -866,18 +920,27 @@ paths:
       responses:
         '200':
           description: Action performed
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/GameActionSuccessResponse'
         '401':
           description: Unauthorized
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UnauthorizedResponse'
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
@@ -897,12 +960,18 @@ paths:
       responses:
         '200':
           description: Successfully fetched the configuration
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ConfigurationSuccessResponse'
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
@@ -930,12 +999,18 @@ paths:
       responses:
         '200':
           description: Successful get.
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
                 type: object
         '500':
           description: Internal server error
+          headers:
+            X-ORTHANC-PLATFROM-VERSION:
+              $ref: '#/components/headers/X-ORTHANC-PLATFORM-VERSION'
           content:
             application/json:
               schema:
