# src-server/src/app/header/header-names.enum.php
@@ -1,5 +1,6 @@
 <?php
 enum HeaderName: string {
-  case Accept = "Accept";
+  case Accept = "HTTP_ACCEPT";
   case RequestId = "HTTP_X_ORTHANC_REQUEST_ID";
+  case OrthancPlafromVersion = "X-ORTHANC-PLATFORM-VERSION";
 }
